08/labs/tls/ingress-tls.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-ssl
  labels:
    name: ingress-ssl
spec:
  ingressClassName: nginx
  tls:
  - hosts: 
    - "https-example.foo.com"
    secretName: https-example.foo.com
  rules:
  - host: https-example.foo.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: foo-svc
            port: 
              number: 80
